fix(music): invalidate legacy cache and harden against path traversal
- Add cache format versioning (v2) to detect and wipe potentially truncated MP3 files left over from version 3.0.1
- Implement safeResolve to prevent directory traversal attacks via malicious songId inputs
- Update getCachedFile and beginPartFile to use the new path validation
- Add logs/ to .gitignore